--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,18 @@
       href="https://fonts.googleapis.com/css2?family=Space+Mono&display=swap"
       rel="stylesheet"
     />
+    <style>
+      body {
+        font: 16px 'Space Mono';
+      }
+      li {
+        display: flex;
+        flex-direction: column;
+      }
+      label {
+        margin-left: 1em;
+      }
+    </style>
   </head>
   <body>
     <div id="app"></div>
