--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,10 @@
       body {
         font: 16px 'Space Mono';
       }
+      ol {
+        display: flex;
+        flex-direction: column-reverse;
+      }
       li {
         display: flex;
         flex-direction: column;
