--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
       }
       ol {
         display: flex;
-        flex-direction: column-reverse;
+        flex-direction: column;
       }
       li {
         display: flex;
